test/sema/trait_objects/trait_object_invalid_trait.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:16: error: 'Foo' is not a trait
  let x: *impl Foo;
}
